Log in
Skip to main content
Skip to sidebar
Linked Applications
Loading…
Whamcloud Community JIRA
Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Lustre
LU-2927
mdt_reconstruct_open() ASSERTION failure
Add Node
Resolved
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Fixed
Priority:
Blocker
Fix Version/s:
Lustre 2.4.0
Affects Version/s:
Lustre 2.4.0
Labels:
LB
mq213
patch
Severity:
3
Rank (Obsolete):
7028
Description
transno shouldn't be cleared for EREMOTE operation.
Attachments
Attachments
Options
Sort By Name
Sort By Date
Ascending
Descending
Thumbnails
List
Download All
LU-2927-MDS-console-log.txt
7 kB
22/May/13 4:50 PM
lustre.log.LU-2927.txt
1.62 MB
22/May/13 4:50 PM
Activity
People
Assignee:
Di Wang (Inactive)
Reporter:
Andriy Skulysh
Votes:
0
Vote for this issue
Watchers:
8
Start watching this issue
Dates
Created:
07/Mar/13 8:06 AM
Updated:
22/May/13 4:50 PM
Resolved:
25/Mar/13 3:42 AM